--- a/src/app/libros/libros.component.html
+++ b/src/app/libros/libros.component.html
@@ -31,18 +31,34 @@
                                 aria-owns="algolia-autocomplete-listbox-0" dir="auto">
                         </div> -->
                     </th>
-                    <!-- <th *ngIf="opcionCoordinadores[0].permitido==true" scope="col" class="col-2 text-right" style="width: 20%">
-                        <div class="d-flex justify-content-end align-items-center">
-                            <i class="fa fa-plus agregar font-big cursor-pointer"
-                                [routerLink]="[{ outlets: {outletCoordinadores: ['crear-editar-coordinador'] }}]"></i>
+                    <th scope="col" class="text-center">
+                        <div (click)="prb()"><i
+                                class="fa fa-filter font-big" aria-hidden="true">
+                            </i>Copias
                         </div>
-                    </th> -->
+                        <!-- <div *ngIf="filtrarNombreCoordinador==true">
+                            <input type="search" [(ngModel)]="filtroNombreCoordinador"
+                                [ngModelOptions]="{standalone: true}"
+                                class="form-control ds-input mb-2 w-75 floatright-"
+                                placeholder="Buscar por nombre" autocomplete="off" spellcheck="false"
+                                aria-autocomplete="list" aria-expanded="false"
+                                aria-owns="algolia-autocomplete-listbox-0" dir="auto">
+                        </div> -->
+                    </th>
+                    <th scope="col" class="col-2 text-right" style="width: 20%">
+                        <div class="d-flex justify-content-end align-items-center">
+                            <i class="fa fa-plus agregar font-big cursor-pointer">
+                            </i>
+                            <!-- [routerLink]="[{ outlets: {outletColecciones: ['crear-editar-coleccion'] }}]" -->
+                        </div>
+                    </th>
                 </tr>
             </thead>
             <tbody>
                 <tr *ngFor="let libro of librosList; index as i">
                     <td class="text-center">{{libro.idLibro}}</td>
                     <td class="text-center">{{libro.nombre}}</td>
+                    <td class="text-center">{{libro.copias}}</td>
                     <td class="text-right col-2" style="width: 20%">
                         <div class="d-flex justify-content-end align-items-center">
                             <div>
