--- a/src/app/revistas/revistas.component.html
+++ b/src/app/revistas/revistas.component.html
@@ -1,1 +1,84 @@
-<p>revistas works!</p>
+<div class="container">
+    <div class="table-wrapper-scroll-y my-custom-scrollbar">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th scope="col" class="text-center">
+                        <div (click)="prb()"><i class="fa fa-filter font-big"
+                                aria-hidden="true">
+                            </i>Id Libro
+                        </div>
+                        <!-- <div *ngIf="filtrarIdCoordinador==true">
+                            <input type="search" [(ngModel)]="filtroIdCoordinador"
+                                [ngModelOptions]="{standalone: true}"
+                                class="form-control ds-input mb-2 w-75 floatright-"
+                                placeholder="Buscar por nombre" autocomplete="off" spellcheck="false"
+                                aria-autocomplete="list" aria-expanded="false"
+                                aria-owns="algolia-autocomplete-listbox-0" dir="auto">
+                        </div> -->
+                    </th>
+                    <th scope="col" class="text-center">
+                        <div (click)="prb()"><i
+                                class="fa fa-filter font-big" aria-hidden="true">
+                            </i>Libro
+                        </div>
+                        <!-- <div *ngIf="filtrarNombreCoordinador==true">
+                            <input type="search" [(ngModel)]="filtroNombreCoordinador"
+                                [ngModelOptions]="{standalone: true}"
+                                class="form-control ds-input mb-2 w-75 floatright-"
+                                placeholder="Buscar por nombre" autocomplete="off" spellcheck="false"
+                                aria-autocomplete="list" aria-expanded="false"
+                                aria-owns="algolia-autocomplete-listbox-0" dir="auto">
+                        </div> -->
+                    </th>
+                    <th scope="col" class="text-center">
+                        <div (click)="prb()"><i
+                                class="fa fa-filter font-big" aria-hidden="true">
+                            </i>Copias
+                        </div>
+                        <!-- <div *ngIf="filtrarNombreCoordinador==true">
+                            <input type="search" [(ngModel)]="filtroNombreCoordinador"
+                                [ngModelOptions]="{standalone: true}"
+                                class="form-control ds-input mb-2 w-75 floatright-"
+                                placeholder="Buscar por nombre" autocomplete="off" spellcheck="false"
+                                aria-autocomplete="list" aria-expanded="false"
+                                aria-owns="algolia-autocomplete-listbox-0" dir="auto">
+                        </div> -->
+                    </th>
+                    <th scope="col" class="col-2 text-right" style="width: 20%">
+                        <div class="d-flex justify-content-end align-items-center">
+                            <i class="fa fa-plus agregar font-big cursor-pointer">
+                            </i>
+                            <!-- [routerLink]="[{ outlets: {outletColecciones: ['crear-editar-coleccion'] }}]" -->
+                        </div>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let revista of revistasList; index as i">
+                    <td class="text-center">{{revista.idRevista}}</td>
+                    <td class="text-center">{{revista.nombre}}</td>
+                    <td class="text-center">{{revista.copias}}</td>
+                    <td class="text-right col-2" style="width: 20%">
+                        <div class="d-flex justify-content-end align-items-center">
+                            <div>
+                                <i class="fa fa-list font-blue font-big cursor-pointer"
+                                    aria-hidden="true"
+                                    >&nbsp;</i>
+                            </div>
+                            <div>
+                                <i class="fa fa-pencil-square-o font-blue font-big cursor-pointer"
+                                    aria-hidden="true"
+                                    >&nbsp;</i>
+                            </div>
+                            <div>
+                                <i class="fa fa-times eliminar font-big cursor-pointer"
+                                    ></i>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
