Casi todo el front :v

--- a/src/app/menu-superior/menu-superior.component.html
+++ b/src/app/menu-superior/menu-superior.component.html
@@ -34,8 +34,8 @@
                     Reservas
                 </a>
                 <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item color" href="#">Reservar Libro</a>
-                        <a class="dropdown-item color" href="#">Reservar Revista</a>
+                        <a class="dropdown-item color" [routerLink]="[ '/reservar-libro' ]">Reservar Libro</a>
+                        <a class="dropdown-item color" [routerLink]="[ '/reservar-revista' ]">Reservar Revista</a>
                         <!-- <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a> -->
                 </div>
