--- a/src/app/libros/libros.component.html
+++ b/src/app/libros/libros.component.html
@@ -1,25 +1,19 @@
+<router-outlet name="outletCrearLibro"></router-outlet>
+<router-outlet name="outletEditarLibro"></router-outlet>
+<router-outlet name="outletEliminarLibro"></router-outlet>
+<div class="container mt-5">
+    <div class="justify-content-center d-flex">
+        <h5 class="title font-weight-bold ">Libros</h5>
+    </div>
+</div>
+
 <div class="container">
     <div class="table-wrapper-scroll-y my-custom-scrollbar">
-        <table class="table table-striped">
+        <table class="table table-striped ">
             <thead>
                 <tr>
                     <th scope="col" class="text-center">
-                        <div (click)="prb()"><i class="fa fa-filter font-big"
-                                aria-hidden="true">
-                            </i>Id Libro
-                        </div>
-                        <!-- <div *ngIf="filtrarIdCoordinador==true">
-                            <input type="search" [(ngModel)]="filtroIdCoordinador"
-                                [ngModelOptions]="{standalone: true}"
-                                class="form-control ds-input mb-2 w-75 floatright-"
-                                placeholder="Buscar por nombre" autocomplete="off" spellcheck="false"
-                                aria-autocomplete="list" aria-expanded="false"
-                                aria-owns="algolia-autocomplete-listbox-0" dir="auto">
-                        </div> -->
-                    </th>
-                    <th scope="col" class="text-center">
-                        <div (click)="prb()"><i
-                                class="fa fa-filter font-big" aria-hidden="true">
+                        <div (click)="prb()"><i class="fa fa-filter font-big" aria-hidden="true">
                             </i>Libro
                         </div>
                         <!-- <div *ngIf="filtrarNombreCoordinador==true">
@@ -32,9 +26,21 @@
                         </div> -->
                     </th>
                     <th scope="col" class="text-center">
-                        <div (click)="prb()"><i
-                                class="fa fa-filter font-big" aria-hidden="true">
+                        <div (click)="prb()"><i class="fa fa-filter font-big" aria-hidden="true">
                             </i>Copias
+                        </div>
+                        <!-- <div *ngIf="filtrarNombreCoordinador==true">
+                            <input type="search" [(ngModel)]="filtroNombreCoordinador"
+                                [ngModelOptions]="{standalone: true}"
+                                class="form-control ds-input mb-2 w-75 floatright-"
+                                placeholder="Buscar por nombre" autocomplete="off" spellcheck="false"
+                                aria-autocomplete="list" aria-expanded="false"
+                                aria-owns="algolia-autocomplete-listbox-0" dir="auto">
+                        </div> -->
+                    </th>
+                    <th scope="col" class="text-center">
+                        <div (click)="prb()"><i class="fa fa-filter font-big" aria-hidden="true">
+                            </i>Copias Disponibles
                         </div>
                         <!-- <div *ngIf="filtrarNombreCoordinador==true">
                             <input type="search" [(ngModel)]="filtroNombreCoordinador"
@@ -47,33 +53,26 @@
                     </th>
                     <th scope="col" class="col-2 text-right" style="width: 20%">
                         <div class="d-flex justify-content-end align-items-center">
-                            <i class="fa fa-plus agregar font-big cursor-pointer">
-                            </i>
-                            <!-- [routerLink]="[{ outlets: {outletColecciones: ['crear-editar-coleccion'] }}]" -->
+                            <i class="fa fa-plus agregar font-big cursor-pointer"
+                                [routerLink]="[{  outlets: {outletCrearLibro: ['crear-libro'] }}]"></i>
                         </div>
                     </th>
                 </tr>
             </thead>
             <tbody>
                 <tr *ngFor="let libro of librosList; index as i">
-                    <td class="text-center">{{libro.idLibro}}</td>
                     <td class="text-center">{{libro.nombre}}</td>
                     <td class="text-center">{{libro.copias}}</td>
+                    <td class="text-center">{{libro.copiasDisponibles}}</td>
                     <td class="text-right col-2" style="width: 20%">
                         <div class="d-flex justify-content-end align-items-center">
                             <div>
-                                <i class="fa fa-list font-blue font-big cursor-pointer"
-                                    aria-hidden="true"
-                                    >&nbsp;</i>
+                                <i class="fa fa-pencil-square-o font-blue font-big cursor-pointer" aria-hidden="true"
+                                    (click)="editarLibro(libro)">&nbsp;</i>
                             </div>
                             <div>
-                                <i class="fa fa-pencil-square-o font-blue font-big cursor-pointer"
-                                    aria-hidden="true"
-                                    >&nbsp;</i>
-                            </div>
-                            <div>
-                                <i class="fa fa-times eliminar font-big cursor-pointer"
-                                    ></i>
+                                <i class="fa fa-times eliminar font-big cursor-pointer" aria-hidden="true"
+                                    (click)="eliminarLibro(libro)"></i>
                             </div>
                         </div>
                     </td>
