--- a/src/app/miembros/miembros-personal/miembros-personal.component.html
+++ b/src/app/miembros/miembros-personal/miembros-personal.component.html
@@ -1,1 +1,95 @@
-<p>miembros-personal works!</p>
+<router-outlet name="outletCrearMiembrosPersonal"></router-outlet>
+<router-outlet name="outletEliminarMiembrosPersonal"></router-outlet>
+<div class="container mt-5">
+    <div class="justify-content-center d-flex">
+            <h5 class="title font-weight-bold ">Miembros Personal</h5>
+    </div>
+</div>
+
+<div class="container">
+    <div class="table-wrapper-scroll-y my-custom-scrollbar">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <!-- <th scope="col" class="text-center">
+                        <div (click)="prb()"><i class="fa fa-filter font-big"
+                                aria-hidden="true">
+                            </i>Id Libro
+                        </div> -->
+                        <!-- <div *ngIf="filtrarIdCoordinador==true">
+                            <input type="search" [(ngModel)]="filtroIdCoordinador"
+                                [ngModelOptions]="{standalone: true}"
+                                class="form-control ds-input mb-2 w-75 floatright-"
+                                placeholder="Buscar por nombre" autocomplete="off" spellcheck="false"
+                                aria-autocomplete="list" aria-expanded="false"
+                                aria-owns="algolia-autocomplete-listbox-0" dir="auto">
+                        </div> -->
+                    <!-- </th> -->
+                    <th scope="col" class="text-center">
+                        <div (click)="prb()"><i
+                                class="fa fa-filter font-big" aria-hidden="true">
+                            </i>Nombre
+                        </div>
+                        <!-- <div *ngIf="filtrarNombreCoordinador==true">
+                            <input type="search" [(ngModel)]="filtroNombreCoordinador"
+                                [ngModelOptions]="{standalone: true}"
+                                class="form-control ds-input mb-2 w-75 floatright-"
+                                placeholder="Buscar por nombre" autocomplete="off" spellcheck="false"
+                                aria-autocomplete="list" aria-expanded="false"
+                                aria-owns="algolia-autocomplete-listbox-0" dir="auto">
+                        </div> -->
+                    </th>
+                    <th scope="col" class="text-center">
+                        <div (click)="prb()"><i
+                                class="fa fa-filter font-big" aria-hidden="true">
+                            </i>Libro
+                        </div>
+                        <!-- <div *ngIf="filtrarNombreCoordinador==true">
+                            <input type="search" [(ngModel)]="filtroNombreCoordinador"
+                                [ngModelOptions]="{standalone: true}"
+                                class="form-control ds-input mb-2 w-75 floatright-"
+                                placeholder="Buscar por nombre" autocomplete="off" spellcheck="false"
+                                aria-autocomplete="list" aria-expanded="false"
+                                aria-owns="algolia-autocomplete-listbox-0" dir="auto">
+                        </div> -->
+                    </th>
+                    <th scope="col" class="text-center">
+                        <div (click)="prb()"><i
+                                class="fa fa-filter font-big" aria-hidden="true">
+                            </i>Revista
+                        </div>
+                        <!-- <div *ngIf="filtrarNombreCoordinador==true">
+                            <input type="search" [(ngModel)]="filtroNombreCoordinador"
+                                [ngModelOptions]="{standalone: true}"
+                                class="form-control ds-input mb-2 w-75 floatright-"
+                                placeholder="Buscar por nombre" autocomplete="off" spellcheck="false"
+                                aria-autocomplete="list" aria-expanded="false"
+                                aria-owns="algolia-autocomplete-listbox-0" dir="auto">
+                        </div> -->
+                    </th>
+                    <th scope="col" class="col-2 text-right" style="width: 20%">
+                        <div class="d-flex justify-content-end align-items-center">
+                            <i class="fa fa-plus agregar font-big cursor-pointer"
+                                [routerLink]="[{ outlets: {outletCrearMiembrosPersonal: ['crear-miembros-personal'] }}]"></i>
+                        </div>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let miembro of miembrosList; index as i">
+                    <td class="text-center">{{miembro.nombre}}</td>
+                    <td class="text-center">{{miembro.copiasLibro}}</td>
+                    <td class="text-center">{{miembro.copiasRevistas}}</td>
+                    <td class="text-right col-2" style="width: 20%">
+                        <div class="d-flex justify-content-end align-items-center">
+                            <div>
+                                <i class="fa fa-times eliminar font-big cursor-pointer"
+                                    (click)="eliminarMiembroPersonal(miembro)"></i>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
