--- a/src/app/revistas/revistas.component.html
+++ b/src/app/revistas/revistas.component.html
@@ -1,26 +1,21 @@
+<router-outlet name="outletCrearRevista"></router-outlet>
+<router-outlet name="outletEditarRevista"></router-outlet>
+<router-outlet name="outletEliminarRevista"></router-outlet>
+<div class="container mt-5">
+    <div class="justify-content-center d-flex">
+            <h5 class="title font-weight-bold ">Revistas</h5>
+    </div>
+</div>
+
 <div class="container">
     <div class="table-wrapper-scroll-y my-custom-scrollbar">
         <table class="table table-striped">
             <thead>
                 <tr>
                     <th scope="col" class="text-center">
-                        <div (click)="prb()"><i class="fa fa-filter font-big"
-                                aria-hidden="true">
-                            </i>Id Libro
-                        </div>
-                        <!-- <div *ngIf="filtrarIdCoordinador==true">
-                            <input type="search" [(ngModel)]="filtroIdCoordinador"
-                                [ngModelOptions]="{standalone: true}"
-                                class="form-control ds-input mb-2 w-75 floatright-"
-                                placeholder="Buscar por nombre" autocomplete="off" spellcheck="false"
-                                aria-autocomplete="list" aria-expanded="false"
-                                aria-owns="algolia-autocomplete-listbox-0" dir="auto">
-                        </div> -->
-                    </th>
-                    <th scope="col" class="text-center">
                         <div (click)="prb()"><i
                                 class="fa fa-filter font-big" aria-hidden="true">
-                            </i>Libro
+                            </i>Revista
                         </div>
                         <!-- <div *ngIf="filtrarNombreCoordinador==true">
                             <input type="search" [(ngModel)]="filtroNombreCoordinador"
@@ -45,9 +40,22 @@
                                 aria-owns="algolia-autocomplete-listbox-0" dir="auto">
                         </div> -->
                     </th>
+                    <th scope="col" class="text-center">
+                        <div (click)="prb()"><i class="fa fa-filter font-big" aria-hidden="true">
+                            </i>Copias Disponibles
+                        </div>
+                        <!-- <div *ngIf="filtrarNombreCoordinador==true">
+                            <input type="search" [(ngModel)]="filtroNombreCoordinador"
+                                [ngModelOptions]="{standalone: true}"
+                                class="form-control ds-input mb-2 w-75 floatright-"
+                                placeholder="Buscar por nombre" autocomplete="off" spellcheck="false"
+                                aria-autocomplete="list" aria-expanded="false"
+                                aria-owns="algolia-autocomplete-listbox-0" dir="auto">
+                        </div> -->
+                    </th>
                     <th scope="col" class="col-2 text-right" style="width: 20%">
                         <div class="d-flex justify-content-end align-items-center">
-                            <i class="fa fa-plus agregar font-big cursor-pointer">
+                            <i class="fa fa-plus agregar font-big cursor-pointer" [routerLink]="[{  outlets: {outletCrearRevista: ['crear-revista'] }}]">
                             </i>
                             <!-- [routerLink]="[{ outlets: {outletColecciones: ['crear-editar-coleccion'] }}]" -->
                         </div>
@@ -56,24 +64,19 @@
             </thead>
             <tbody>
                 <tr *ngFor="let revista of revistasList; index as i">
-                    <td class="text-center">{{revista.idRevista}}</td>
                     <td class="text-center">{{revista.nombre}}</td>
                     <td class="text-center">{{revista.copias}}</td>
+                    <td class="text-center">{{revista.copiasDisponibles}}</td>
                     <td class="text-right col-2" style="width: 20%">
                         <div class="d-flex justify-content-end align-items-center">
                             <div>
-                                <i class="fa fa-list font-blue font-big cursor-pointer"
-                                    aria-hidden="true"
-                                    >&nbsp;</i>
-                            </div>
-                            <div>
                                 <i class="fa fa-pencil-square-o font-blue font-big cursor-pointer"
                                     aria-hidden="true"
-                                    >&nbsp;</i>
+                                    (click)="editarRevista(revista)">&nbsp;</i>
                             </div>
                             <div>
                                 <i class="fa fa-times eliminar font-big cursor-pointer"
-                                    ></i>
+                                    (click)="eliminarRevista(revista)"></i>
                             </div>
                         </div>
                     </td>
