--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,83 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.background-loading {
+	background-color: rgba(52, 58, 64, 0.4);
+	position        : fixed;
+	top             : 0;
+	left            : 0;
+	width           : 100%;
+	height          : 100%;
+	z-index         : 9999;
+	display         : none;
+}
+
+.loading {
+	background-image   : url(assets/img/loading.gif);
+	background-size    : 50px 50px;
+	width              : 100%;
+	height             : 100%;
+	background-position: center;
+	background-repeat  : no-repeat;
+	z-index            : 9999;
+}
+
+.modals {
+	display: none;
+}
+
+.background-popup {
+	background-color: rgba(0, 0, 0, 0.2);
+	width           : 100%;
+	height          : 100%;
+	position        : fixed;
+	top             : 0;
+	left            : 0;
+	z-index         : 1000;
+}
+
+.pop-up {
+	position          : absolute;
+	z-index           : 2000;
+	left              : 0;
+	right             : 0;
+	top               : 20px;
+	width             : 45%;
+	margin            : 0 auto;
+	background-color  : white;
+	border-radius     : 5px;
+	box-shadow        : 2px 2px 10px 1px black;
+	-webkit-box-shadow: 2px 2px 10px 1px black;
+	margin-bottom     : 60px;
+	overflow          : hidden;
+}
+
+.coord-modal-full {
+	width        : 95%;
+	max-height   : 95vh;
+	height       : auto;
+	margin-bottom: 55px;
+}
+
+.modal-scroll {
+	overflow-y: scroll;
+	max-height: 90vh;
+	height    : auto;
+}
+
+.modal-header,
+.modal-footer {
+	padding-top   : 10px;
+	padding-bottom: 10px;
+}
+
+.my-custom-scrollbar {
+	position: relative;
+	height  : 70vh;
+	overflow: auto;
+}
+
+.table-wrapper-scroll-y {
+	display: block;
+}
