--- a/src/app/miembros/miembros-biblioteca/miembros-biblioteca.component.html
+++ b/src/app/miembros/miembros-biblioteca/miembros-biblioteca.component.html
@@ -1,5 +1,6 @@
 <router-outlet name="outletCrearMiembrosBiblioteca"></router-outlet>
 <router-outlet name="outletEliminarMiembrosBiblioteca"></router-outlet>
+<router-outlet name="outletConsultarLibroMiembrosBiblioteca"></router-outlet>
 <div class="container mt-5">
     <div class="justify-content-center d-flex">
             <h5 class="title font-weight-bold ">Miembros Biblioteca</h5>
@@ -12,30 +13,30 @@
             <thead>
                 <tr>
                     <th scope="col" class="text-center">
-                        <div (click)="prb()"><i class="fa fa-filter font-big" aria-hidden="true">
+                        <div (click)="aplicarFiltrarNombreMiembro()"><i class="fa fa-filter font-big" aria-hidden="true">
                             </i>Nombre
                         </div>
-                        <!-- <div *ngIf="filtrarNombreCoordinador==true">
-                            <input type="search" [(ngModel)]="filtroNombreCoordinador"
+                        <div *ngIf="filtrarNombreMiembro==true">
+                            <input type="search" [(ngModel)]="filtroNombreMiembro"
                                 [ngModelOptions]="{standalone: true}"
                                 class="form-control ds-input mb-2 w-75 floatright-"
                                 placeholder="Buscar por nombre" autocomplete="off" spellcheck="false"
                                 aria-autocomplete="list" aria-expanded="false"
                                 aria-owns="algolia-autocomplete-listbox-0" dir="auto">
-                        </div> -->
+                        </div>
                     </th>
                     <th scope="col" class="text-center">
-                        <div (click)="prb()"><i class="fa fa-filter font-big" aria-hidden="true">
+                        <div (click)="aplicarFiltrarMiembroLibro()"><i class="fa fa-filter font-big" aria-hidden="true">
                             </i>Libro
                         </div>
-                        <!-- <div *ngIf="filtrarNombreCoordinador==true">
-                            <input type="search" [(ngModel)]="filtroNombreCoordinador"
+                        <div *ngIf="filtrarMiembroLibro==true">
+                            <input type="search" [(ngModel)]="filtroMiembroLibro"
                                 [ngModelOptions]="{standalone: true}"
                                 class="form-control ds-input mb-2 w-75 floatright-"
                                 placeholder="Buscar por nombre" autocomplete="off" spellcheck="false"
                                 aria-autocomplete="list" aria-expanded="false"
                                 aria-owns="algolia-autocomplete-listbox-0" dir="auto">
-                        </div> -->
+                        </div>
                     </th>
                     <th scope="col" class="col-2 text-right" style="width: 20%">
                         <div class="d-flex justify-content-end align-items-center">
@@ -47,9 +48,10 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let miembro of miembrosList; index as i">
+                <tr *ngFor="let miembro of miembrosList | filterPipe:'nombre':filtroNombreMiembro  
+                | filterPipe:'copiasLibro':filtroMiembroLibro; index as i">
                     <td class="text-center">{{miembro.nombre}}</td>
-                    <td class="text-center">{{miembro.copiasLibro}}</td>
+                    <td class="text-center cursor text-decoration" (click)="consultarInfoLibro(miembro)">{{miembro.copiasLibro}}</td>
                     <td class="text-right col-2" style="width: 20%">
                         <div class="d-flex justify-content-end align-items-center">
                             <div>
