--- a/src/app/reservas/reservar-libro/reservar-libro.component.html
+++ b/src/app/reservas/reservar-libro/reservar-libro.component.html
@@ -1,4 +1,5 @@
 <router-outlet name="outletReservarLibro"></router-outlet>
+<router-outlet name="outletReservarLibroPresonal"></router-outlet>
 <div class="container mt-5">
     <div class="justify-content-center d-flex">
         <h5 class="title font-weight-bold ">Reservar Libros</h5>
@@ -15,8 +16,14 @@
             <thead>
                 <tr>
                     <th scope="col" class="text-center">
-                        <div (click)="prb()"><i class="fa fa-filter font-big" aria-hidden="true">
+                        <div (click)="aplicarFiltrarNombreMiembroPersonal()"><i class="fa fa-filter font-big" aria-hidden="true">
                             </i>Nombre
+                        </div>
+                        <div *ngIf="filtrarNombreMiembroPersonal==true">
+                            <input type="search" [(ngModel)]="filtroNombreMiembroPersonal" [ngModelOptions]="{standalone: true}"
+                                class="form-control ds-input mb-2 w-75 float-right" placeholder="Buscar por nombre"
+                                autocomplete="off" spellcheck="false" aria-autocomplete="list" aria-expanded="false"
+                                aria-owns="algolia-autocomplete-listbox-0" dir="auto">
                         </div>
                     </th>
                     <th scope="col" class="col-2 text-right" style="width: 20%">
@@ -24,7 +31,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let miembro of miembrosPersonalList; index as i">
+                <tr *ngFor="let miembro of miembrosPersonalList  | filterPipe:'nombre':filtroNombreMiembroPersonal; index as i">
                     <td class="text-center">{{miembro.nombre}}</td>
                     <td class="text-right col-2" style="width: 20%">
                         <div class="d-flex justify-content-end align-items-center">
@@ -46,16 +53,22 @@
             <thead>
                 <tr>
                     <th scope="col" class="text-center">
-                        <div (click)="prb()"><i class="fa fa-filter font-big" aria-hidden="true">
+                        <div (click)="aplicarFiltrarNombreMiembroBiblioteca()"><i class="fa fa-filter font-big" aria-hidden="true">
                             </i>Nombre
                         </div>
-
+                        <div *ngIf="filtrarNombreMiembroBiblioteca==true">
+                            <input type="search" [(ngModel)]="filtroNombreMiembroBiblioteca" [ngModelOptions]="{standalone: true}"
+                                class="form-control ds-input mb-2 w-75 float-right" placeholder="Buscar por nombre"
+                                autocomplete="off" spellcheck="false" aria-autocomplete="list" aria-expanded="false"
+                                aria-owns="algolia-autocomplete-listbox-0" dir="auto">
+                        </div>
                     <th scope="col" class="col-2 text-right" style="width: 20%">
                     </th>
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let miembro of miembrosBibliotecaList; index as i">
+                <tr
+                    *ngFor="let miembro of miembrosBibliotecaList | filterPipe:'nombre':filtroNombreMiembroBiblioteca; index as i">
                     <td class="text-center">{{miembro.nombre}}</td>
                     <td class="text-right col-2" style="width: 20%">
                         <div class="d-flex justify-content-end align-items-center">
