--- a/src/app/revistas/revistas.component.html
+++ b/src/app/revistas/revistas.component.html
@@ -13,45 +13,45 @@
             <thead>
                 <tr>
                     <th scope="col" class="text-center">
-                        <div (click)="prb()"><i
+                        <div (click)="aplicarFiltrarNombreLibro()"><i
                                 class="fa fa-filter font-big" aria-hidden="true">
                             </i>Revista
                         </div>
-                        <!-- <div *ngIf="filtrarNombreCoordinador==true">
-                            <input type="search" [(ngModel)]="filtroNombreCoordinador"
+                        <div *ngIf="filtrarNombreLibro==true">
+                            <input type="search" [(ngModel)]="filtroNombreLibro"
                                 [ngModelOptions]="{standalone: true}"
                                 class="form-control ds-input mb-2 w-75 floatright-"
                                 placeholder="Buscar por nombre" autocomplete="off" spellcheck="false"
                                 aria-autocomplete="list" aria-expanded="false"
                                 aria-owns="algolia-autocomplete-listbox-0" dir="auto">
-                        </div> -->
+                        </div>
                     </th>
                     <th scope="col" class="text-center">
-                        <div (click)="prb()"><i
+                        <div (click)="aplicarFiltrarCopiaLibro()"><i
                                 class="fa fa-filter font-big" aria-hidden="true">
                             </i>Copias
                         </div>
-                        <!-- <div *ngIf="filtrarNombreCoordinador==true">
-                            <input type="search" [(ngModel)]="filtroNombreCoordinador"
+                        <div *ngIf="filtrarCopiasLibro==true">
+                            <input type="search" [(ngModel)]="filtroCopiasLibro"
                                 [ngModelOptions]="{standalone: true}"
                                 class="form-control ds-input mb-2 w-75 floatright-"
                                 placeholder="Buscar por nombre" autocomplete="off" spellcheck="false"
                                 aria-autocomplete="list" aria-expanded="false"
                                 aria-owns="algolia-autocomplete-listbox-0" dir="auto">
-                        </div> -->
+                        </div>
                     </th>
                     <th scope="col" class="text-center">
-                        <div (click)="prb()"><i class="fa fa-filter font-big" aria-hidden="true">
+                        <div (click)="aplicarFiltrarDisponibleLibro()"><i class="fa fa-filter font-big" aria-hidden="true">
                             </i>Copias Disponibles
                         </div>
-                        <!-- <div *ngIf="filtrarNombreCoordinador==true">
-                            <input type="search" [(ngModel)]="filtroNombreCoordinador"
+                        <div *ngIf="filtrarDisponibleLibro==true">
+                            <input type="search" [(ngModel)]="filtroDisponibleLibro"
                                 [ngModelOptions]="{standalone: true}"
                                 class="form-control ds-input mb-2 w-75 floatright-"
                                 placeholder="Buscar por nombre" autocomplete="off" spellcheck="false"
                                 aria-autocomplete="list" aria-expanded="false"
                                 aria-owns="algolia-autocomplete-listbox-0" dir="auto">
-                        </div> -->
+                        </div>
                     </th>
                     <th scope="col" class="col-2 text-right" style="width: 20%">
                         <div class="d-flex justify-content-end align-items-center">
@@ -63,7 +63,8 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let revista of revistasList; index as i">
+                <tr *ngFor="let revista of revistasList | filterPipe:'nombre':filtroNombreLibro  
+                | filterPipe:'copias':filtroCopiasLibro | filterPipe:'copiasDisponibles':filtroDisponibleLibro; index as i">
                     <td class="text-center">{{revista.nombre}}</td>
                     <td class="text-center">{{revista.copias}}</td>
                     <td class="text-center">{{revista.copiasDisponibles}}</td>
